# docs/swagger.yaml
@@ -2281,6 +2281,31 @@ definitions:
     - name
     - site_url
     type: object
+  schema.SiteHomepageBannerReq:
+    properties:
+      enabled:
+        type: boolean
+      image_url:
+        maxLength: 512
+        type: string
+      link_url:
+        maxLength: 1024
+        type: string
+    type: object
+  schema.SiteHomepageReq:
+    properties:
+      home_banner:
+        $ref: '#/definitions/schema.SiteHomepageBannerReq'
+      hot_articles_ad:
+        $ref: '#/definitions/schema.SiteHomepageBannerReq'
+    type: object
+  schema.SiteHomepageResp:
+    properties:
+      home_banner:
+        $ref: '#/definitions/schema.SiteHomepageBannerReq'
+      hot_articles_ad:
+        $ref: '#/definitions/schema.SiteHomepageBannerReq'
+    type: object
   schema.SiteInfoResp:
     properties:
       branding:
@@ -2289,6 +2314,8 @@ definitions:
         $ref: '#/definitions/schema.SiteCustomCssHTMLResp'
       general:
         $ref: '#/definitions/schema.SiteGeneralResp'
+      homepage:
+        $ref: '#/definitions/schema.SiteHomepageResp'
       interface:
         $ref: '#/definitions/schema.SiteInterfaceResp'
       login:
@@ -4047,6 +4074,47 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: update site general information
+      tags:
+      - admin
+  /answer/admin/api/siteinfo/homepage:
+    get:
+      description: get site homepage config
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.RespBody'
+            - properties:
+                data:
+                  $ref: '#/definitions/schema.SiteHomepageResp'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: get site homepage config
+      tags:
+      - admin
+    put:
+      description: update site homepage config
+      parameters:
+      - description: homepage info
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/schema.SiteHomepageReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.RespBody'
+      security:
+      - ApiKeyAuth: []
+      summary: update site homepage config
       tags:
       - admin
   /answer/admin/api/siteinfo/interface:
@@ -6981,6 +7049,24 @@ paths:
                   $ref: '#/definitions/schema.SiteInfoResp'
               type: object
       summary: get site info
+      tags:
+      - site
+  /answer/api/v1/siteinfo/homepage:
+    get:
+      description: get site homepage config
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.RespBody'
+            - properties:
+                data:
+                  $ref: '#/definitions/schema.SiteHomepageResp'
+              type: object
+      summary: get site homepage config
       tags:
       - site
   /answer/api/v1/siteinfo/legal:
